<resources>
    <string name="app_name">tourisme</string>
    <string name="screen_1_register">Register</string>
    <string name="telephone">Telephone</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="password">Mot de passe</string>
    <string name="courriel">Courriel</string>
    <string name="age">Age</string>
    <string name="addresse">Addresse</string>
    <string name="se_connecter">Se connecter</string>
    <string name="s_enregistrer">S\'enregistrer</string>
    <string name="aventure">Aventure</string>
    <string name="type_de_voyage">Type de voyage:</string>
    <string name="budget">Budget:</string>
    <string name="destination">Destination:</string>
    <string name="destinationAccueil">Quebec</string>
    <string name="_10">10$</string>
    <string name="voir_historique_de_r_servation">Voir historique de réservation</string>
    <string name="filtres">Filtres</string>
    <string name="choisir_un_voyage">Choisir un voyage</string>
    <string name="todo">TODO</string>
    <string name="duree">Duree:</string>
    <string name="titre">Titre</string>
    <string name="r_server_maintenant">Réserver maintenant</string>
    <string name="description">Description</string>
    <string name="shangai">Shangai</string>
    <string name="_15h">15h</string>
    <string name="_200_personne">$200/Personne</string>
    <string name="destinationDetail">Destination:</string>
    <string name="nombre_de_personnes">Nombre de personnes</string>
    <string name="type">Type</string>
    <string name="filtresTitre">Filtres</string>
    <string name="prix">Prix</string>
    <string name="destinationFiltres">Destination</string>
    <string name="enter_text">Enter text</string>
    <string name="date_de_d_part">Date de départ:</string>
    <string name="confirmer">Confirmer</string>
    <string name="annuler">Annuler</string>
    <string name="retour">retour</string>
    <string name="historique_de_r_servation">Historique de réservation</string>
    <string name="s_enregistrerButton">S\'enregistrer</string>
    <string name="se_connecterLogin">Se connecter</string>
    <string name="error_message">Error message</string>
    <string name="entrez_votre_courriel">Entrez votre courriel</string>
    <string name="screen_1_login">Login</string>
    <string name="entrez_votre_mot_de_passe">Entrez votre mot de passe</string>
    <string name="date">Date</string>
    <string name="destinationHistory">Destination</string>
    <string name="prixHistory">Prix $</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="description_du_voyage">Description du voyage</string>
    <string name="texteDestination">Ontario</string>
    <string name="imageDesc">image</string>
    <string name="prixDetail">10$</string>
    <string name="titreDetail">Titre</string>
    <string name="destinationTexteDetail">Destination:</string>
    <string name="prixDetailTexte">Prix:</string>
    <string name="rechercher_un_voyage">Rechercher un voyage</string>
    <string name="Québec">Québec</string>
    <string name="Aventure">Aventure</string>
    <string name="entrez_votre_destination">Entrez votre destination</string>
    <string name="Trouvé">Résultat</string>
    <string name="aucun_filtre">Aucun filtre</string>
    <string name="enregistrement">Enregistrement</string>
    <string name="connexion">Connexion</string>
    <string name="pas_de_compte">Pas de compte ?</string>
    <string name="annuler_tip">Cliquer sur une réservation pour pouvoir l\'annuler</string>
</resources>